2005-12-15  Max Horn  <max@quendi.de>

	* alloc.cc, Makefile.am, msvcstuff/Exult.vcproj: Removed alloc.cc.

2005-12-14  Max Horn  <max@quendi.de>

	* configure.ac: Removed several outdated / obsolete configure options.

2005-12-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* egg.cc: Set facing for egg-created monsters.

2005-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac, version.cc: netbsd (partial patch #1111951)

2005-12-10  Max Horn  <max@quendi.de>

	* configure.ac: Remove some obsolete warnings.

2005-12-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/contain.cc: fix compile error when exult studio disabled

2005-11-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* flic/playfli.cc: use sint8/uint8 types instead of char/unsigned char

2005-11-19  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* useval.cc: Fixing a bug I introduced when I fixed the Blacksword's
	  'Fire' power.

2005-11-13    <jeff@mini.nerble.net>

	* shapes/shapevga.cc,etc: Moving defs. around so ExultStudio can
	pass the correct game info. when loading shape data.

2005-10-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* useval.cc, ucsched.cc: fixing the Blacksword's 'Fire' power
	  in FoV.

2005-10-25    <jeff@mini.nerble.net>

	* actors.cc: Ready/unready weapon depending on schecule.

2005-10-14    <jeff@mini.nerble.net>

	* readnpcs.cc: New schedules.dat supports z-coord. in pos.

2005-10-09    <jeff@mini.nerble.net>

	* objs/barge.cc (Barge_object): Fixed cart-and-horse animation.

2005-10-04    <jeff@mini.nerble.net>

	* actorio.cc: Save mana/magic for all NPC's.

2005-10-02    <jeff@mini.nerble.net>

	* actorio.cc: Save/restore 2-byte face#.

2005-10-01    <jeff@mini.nerble.net>

	* exult.cc: Watch for game names "blackgate" and "serpentisle".

	* objs/egg.cc (Egg_object): Fixed crash when dropping an egg on
	something else.

2005-08-21    <jeff@mini.nerble.net>
