@@ -1,13 +1,0 @@
-EXTRA_DIST= \
-	changelog \
-	control \
-	copyright \
-	cvs_build \
-	dirs \
-	exult.docs \
-	exult.files \
-	exult-tools.docs \
-	exult-tools.files \
-	exult-tools.README.Debian \
-	files \
-	rules
