@@ -1,10 +1,0 @@
-This package was debianized by Michael Zinn <michael.z@acm.org> on
-Sat,  1 Dec 2001 15:53:46 +1100.
-
-It was downloaded from http://exult.sourceforge.net/
-
-Upstream Author(s): The Exult Team <exult-general@lists.sourceforge.net>
-
-Copyright:
-
-GNU General Public License, version 2.0: see /usr/share/common-licenses/GPL-2
