@@ -1,2 +1,0 @@
-/usr/games
-/usr/share/games
