@@ -1,4 +1,0 @@
-tools/expack.txt
-tools/ipack.txt
-docs/u7eggs.txt
-docs/newgame.txt
