@@ -1,5 +1,0 @@
-FAQ
-MidiInfo.txt
-NEWS
-README
-README.1ST
