@@ -1,3 +1,0 @@
-usr/share/games/exult/*.flx
-usr/man/man6/exult.6
-usr/games/exult
