@@ -1,2 +1,0 @@
-exult_0.98rc1-1_i386.deb contrib/games extra
-exult-tools_0.98rc1-1_i386.deb contrib/games extra
