@@ -1,3 +1,8 @@
+2005-12-29  Max Horn  <max@quendi.de>
+
+	* debian/: Removing the debian directory, as requested by the debian
+	package maintainer
+
 2005-12-15  Max Horn  <max@quendi.de>
 
 	* alloc.cc, Makefile.am, msvcstuff/Exult.vcproj: Removed alloc.cc.
